[package]
name = "savepoint"
version = "0.3.7"
authors = ["Tris Oaten <tris@namtao.com>"]
description = "Can't beat the boss? Load a previous save! A command watcher that commits when you fix errors."
keywords = ["tdd", "git", "autosave", "extreme-programming"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://namtao.com"
repository = "https://github.com/NamtaoProductions/checkpoint"
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
colored = "3.1.1"
command-run = "1.1.2"
crossterm = "0.29.0"
ctrlc = "3.5.2"
itertools = "0.14.0"
notify = "8.2.0"
ratatui = "0.30.0"
spinners = "4.2.0"

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = "s"
lto = true

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"

[lints.clippy]
# UM, ACTUALLY
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
unreachable = "deny"
unimplemented = "deny"
# unchecked_time_subtraction = "deny"
todo = "deny"
string_slice = "deny"
panic_in_result_fn = "deny"
panic = "deny"
exit = "deny"
as_conversions = "deny"
